<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
        name="viewModel"
        type="com.example.simplegithubsearch.ui.main.MainViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/shape_toolbar_bg"
        app:layout_constraintBottom_toTopOf="@id/pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_scrollFlags="scroll|enterAlways">

      <EditText
          android:id="@+id/input"
          android:onEditorSearchAction="@{()->viewModel.getUser()}"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:layout_weight="1"
          android:background="@null"
          android:hint="@string/input_hint"
          android:imeOptions="actionSearch"
          android:inputType="text"
          android:paddingStart="8dp"
          android:paddingEnd="8dp"
          android:text="@={viewModel.input}"
          android:textColor="@color/colorBlack"
          android:textSize="16sp" />

      <ImageButton
          android:id="@+id/buttonSearch"
          android:layout_width="35dp"
          android:layout_height="35dp"
          android:layout_gravity="center_vertical"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:background="@color/colorBlack"
          android:onClick="@{()->viewModel.getUser()}" />
    </LinearLayout>


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/tab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pager"
        app:layout_constraintVertical_bias="1"
        app:tabGravity="fill"
        app:tabMode="fixed" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>