<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

  <data>

  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/favorite"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/test_color">

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>